Resolve accessibility issues with labels and color contrast and clean up some scss

--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -1,19 +1,20 @@
 @import "variables/breaks";
 @import "variables/colors";
 @import "variables/typography";
-
 .l-branding__pul {
     background: $dark-gray;
     border-top: 3px solid $orange;
     min-height: 40px;
     height: 85px;
     position: relative;
-    .menu--level-1, .logo__pul {
+    .menu--level-1,
+    .logo__pul {
         height: 40px;
         position: relative;
         z-index: 10;
     }
-    .menu--level-1 > ul, .logo__pul img {
+    .menu--level-1 > ul,
+    .logo__pul img {
         margin: 0;
         vertical-align: baseline;
         position: relative;
@@ -33,7 +34,8 @@
 .menu--level-1 > ul {
     display: block;
     float: right;
-    > li > a, .btn-account {
+    > li > a,
+    .btn-account {
         color: $gray;
         font-size: 0.75em;
         background: none;
@@ -42,10 +44,72 @@
     > li {
         float: left;
         padding: 0 20px;
-        border-right: 1px solid $gray;
+        border-right: 1px solid darken($gray, 40%);
         &:last-child {
             border-right: none;
             padding-right: 0;
         }
+    }
+}
+
+.l-branding__pul .logo__pul {
+    margin: 0;
+    padding: 0;
+}
+
+.search-options a {
+    color: darken($blue, 3);
+}
+
+@media (max-width: 500px) {
+    .header__secondary .container {
+        height: 140px;
+    }
+    .header__secondary .container .navbar-right {
+        width: 100%;
+        margin-top: 1em;
+    }
+    .search-options,
+    .header__secondary .container .navbar-right .navbar-nav,
+    .l-branding__pul .menu--level-1 {
+        margin: 0 auto;
+        text-align: center;
+        width: 100%;
+        li {
+            display: inline-block;
+            float: none
+        }
+    }
+    #sortAndPerPage {
+        margin: 0 auto;
+        text-align: center;
+        width: 100%;
+        .page_links,
+        .search-widgets {
+            display: inline-block;
+            float: none;
+            font-size: 1.2em;
+            width: 100%;
+        }
+    }
+    .l-branding__pul .menu--level-1 ul li {
+        font-size: 1.2em;
+    }
+    .button--start-over {
+        width: 48%;
+        a {
+            width: 100%;
+            font-size: 14px;
+        }
+    }
+    .button--start-over + .btn {
+        width: 48%;
+    }
+    .page_links {
+        width: 100%;
+        text-align: center;
+    }
+    .btn-group.query {
+        width: 100%;
     }
 }
